# text-to-cypher-node

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
__test__/: index.test.ts
examples/: README.md  basic-usage.js  list-models.js  token-usage.js  typescript-usage.ts
npm/win32-x64-msvc/: package.json
scripts/: create-npm-packages.js  publish-npm-packages.js
src/: lib.rs
templates/: last_request_prompt.txt  system_prompt.txt  user_prompt.txt
x86_64-pc-windows-msvc/npm/darwin-arm64/: README.md  package.json
x86_64-pc-windows-msvc/npm/darwin-x64/: README.md  package.json
x86_64-pc-windows-msvc/npm/linux-arm64-gnu/: README.md  package.json
x86_64-pc-windows-msvc/npm/linux-arm64-musl/: README.md  package.json
x86_64-pc-windows-msvc/npm/linux-x64-gnu/: README.md  package.json
x86_64-pc-windows-msvc/npm/linux-x64-musl/: README.md  package.json
x86_64-pc-windows-msvc/npm/win32-x64-msvc/: README.md  package.json
