[package]
name = "text-to-cypher-node"
version = "0.1.3"
edition = "2021"
authors = ["FalkorDB"]
license = "MIT"
description = "Node.js bindings for text-to-cypher library"
repository = "https://github.com/FalkorDB/text-to-cypher-node"
keywords = ["napi", "cypher", "graph", "database", "falkordb"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"
# Disable default features to avoid including server dependencies (actix-web, etc.)
# We only need the core library functionality for the bindings
# Explicitly set features to empty array to ensure no features are enabled
text-to-cypher = { version = "0.1.6", default-features = false, features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
